--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -14,7 +14,7 @@ body, textarea, input, select {
 }
 
 .container {
-  max-width: 700px;
+  max-width: 800px;
   margin: auto;
   padding: 15px;
 }
@@ -52,7 +52,7 @@ blockquote {
 
 header {
   position: relative;
-  max-width: 700px;
+  max-width: 800px;
   margin: auto;
   padding: 5px 15px;
 }
@@ -100,25 +100,23 @@ footer {
 
 /* Posts */
 
-.blog-post-title,
 .blog-post-content,
-.page-header,
 .page-content {
-  font-family: "Charis SIL", Georgia, 'Times New Roman', Times, serif;
-  line-height: 1.4;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 17px;
+  line-height: 1.5;
 }
 
 .blog-post {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   margin-right: 30px;
 }
 
 .page-header,
 .blog-post-title {
-  font-size: 34px;
+  font-size: 38px;
   font-weight: bold;
-  font-style: italic;
   letter-spacing: -0.5px;
   padding: 0;
   margin: 0;
@@ -150,10 +148,14 @@ footer {
   height: auto;
 }
 
+.blog-post-content > p:last-child {
+  margin-bottom: 0;
+}
+
 .blog-post-meta {
   font-size: 14px;
-  color: #999;
-  margin-top: 0;
+  color: #aaa;
+  margin-top: 8px;
 }
 
 .blog-post-date {
@@ -166,7 +168,6 @@ footer {
 
 .blog-post-date a {
   color: #aaa;
-  border-bottom: 1px dashed #ddd;
   text-decoration: none;
 }
 
