--- a/includes/analytics.html
+++ b/includes/analytics.html
@@ -1,3 +1,3 @@
 <!-- Piwik Image Tracker-->
-<img src="https://stats.codingrobots.com/piwik.php?idsite=2&amp;rec=1" style="border:0" alt="" aria-hidden="true" />
+<img src="https://stats.codingrobots.com/pw.php?idsite=2&amp;rec=1" style="border:0" alt="" aria-hidden="true" />
 <!-- End Piwik -->
