--- a/layouts/default.html
+++ b/layouts/default.html
@@ -38,6 +38,8 @@
 
 		<a href="https://www.codingrobots.com/videomemoires/?utm_source=Sellme.biz&amp;utm_medium=sidebar_link&amp;utm_campaign=Sellme.biz">Video Mémoires</a>		&#183;
 
+		<a href="https://dchest.org">dchest.org</a>  &#183;
+
 		<a href="https://github.com/dchest">github.com/dchest</a>
 
 		<br> &copy; 2005-{{.Site.Date.Format "2006"}} <a rel="author" href="/about.html">{{.Site.Author}}</a> &#183;
